[tool.poetry]
name = "rtm-scripts"
version = "0.1.0"
description = ""
authors = ["Spencer Barton <sbarton272@gmail.com>"]
readme = "README.md"
packages = [{include = "rtm_scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
